changed image location strings